--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 #####################################################
 *.sketch
 *.fig
-./design
+
+design
 
 # Avoid accidental XD upload if you convert the design file
 ###############################################
